# MinimalExplorer

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: 2  Cargo.toml  hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  media.rs  operations.rs  search.rs
src/lib/: actions.ts  core.ts  explorer.svelte.ts  settings.svelte.ts  ui.svelte.ts  utils.ts
src/lib/components/: AddressBar.svelte  ArchiveModal.svelte  CommandPalette.svelte  ContextMenu.svelte  CreateModal.svelte  FileContainer.svelte  FileItem.svelte  HotkeysModal.svelte  PreferencesModal.svelte  PropertiesModal.svelte  SearchModal.svelte  Sidebar.svelte  TabBar.svelte  TerminalPane.svelte
src/routes/: +page.svelte
