[package]
name = "minimal-explorer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "minimal_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
jwalk = "0.8"
notify = "6"
memchr = "2.7"
content_inspector = "0.2"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
open = "5"
tauri-plugin-store = "2"
image = "0.25" # Added for thumbnail generation
urlencoding = "2.1.3"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_Storage_FileSystem"] }
tauri-plugin-window-state = "2"
portable-pty = "0.8"
zip = "0.6.3"
memmap2 = "0.9.3"
redb = "2.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde_json = "1.0"
sha2 = "0.10.8"

[profile.release]
opt-level = 3         # Maximize speed instead of "z" (size)
lto = "fat"           # Heavy Link Time Optimization across all crates
codegen-units = 1     # Allows the compiler to optimize the entire binary as one unit 
panic = "abort"       # Removes stack unwinding code, slightly faster/smaller 
strip = true          # Removes debug symbols to keep size reasonable   
